crates/omnifs-itest/tests/dns/snapshots/routing__03-lookup-reverse.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 3: lookup / :: reverse
entry: reverse dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
