crates/omnifs-itest/tests/dns/snapshots/routing__11-lookup-example-com.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 11: lookup /@cloudflare :: example.com
entry: example.com dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
