crates/omnifs-itest/tests/dns/snapshots/routing__13-lookup-8-8-8-8.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 13: lookup /@cloudflare :: 8.8.8.8
not-found
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
