crates/omnifs-itest/tests/dns/snapshots/routing__14-list-reverse.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 14: list /@cloudflare/reverse
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
